feat: OGPとTwitterカードのメタタグを追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODOアプリ</title>
+
+    <!-- OGP (Open Graph Protocol) -->
+    <meta property="og:title" content="TASKhroma" />
+    <meta property="og:description" content="A completely normal to-do app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sabmwqes.github.io/taskhroma/" />
+    <meta property="og:image" content="https://sabmwqes.github.io/taskhroma/favicon.svg" />
+    <meta property="og:site_name" content="TASKhroma" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="TASKhroma" />
+    <meta name="twitter:description" content="A completely normal to-do app" />
+    <meta name="twitter:image" content="https://sabmwqes.github.io/taskhroma/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
