--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:description" content="A completely normal to-do app" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sabmwqes.github.io/taskhroma/" />
-    <meta property="og:image" content="https://sabmwqes.github.io/taskhroma/favicon.svg" />
+    <meta property="og:image" content="https://sabmwqes.github.io/taskhroma/favicon.png" />
     <meta property="og:site_name" content="TASKhroma" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TASKhroma" />
     <meta name="twitter:description" content="A completely normal to-do app" />
-    <meta name="twitter:image" content="https://sabmwqes.github.io/taskhroma/favicon.svg" />
+    <meta name="twitter:image" content="https://sabmwqes.github.io/taskhroma/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
